--- a/app/templates/anamnesis_form.html
+++ b/app/templates/anamnesis_form.html
@@ -94,27 +94,27 @@
             <legend>Vital Signs</legend>
             <div class="form-group">
                 <label for="blood_pressure">Blood Pressure:</label>
-                <input type="text" class="form-control" id="blood_pressure" name="blood_pressure" required>
+                <input type="text" class="form-control" id="blood_pressure" name="blood_pressure" step="0.01">
             </div>
             <br>
             <div class="form-group">
                 <label for="heart_rate">Heart Rate:</label>
-                <input type="text" class="form-control" id="heart_rate" name="heart_rate" required>
+                <input type="text" class="form-control" id="heart_rate" name="heart_rate" step="0.01">
             </div>
             <br>
             <div class="form-group">
                 <label for="respiratory_rate">Oxygen Saturation:</label>
-                <input type="number" class="form-control" id="respiratory_rate" name="respiratory_rate" required>
+                <input type="number" class="form-control" id="respiratory_rate" name="respiratory_rate" step="0.01">
             </div>
             <br>
             <div class="form-group">
                 <label for="glucose_level">Glucose Level:</label>
-                <input type="number" value="0" class="form-control" id="glucose_level" name="glucose_level">
+                <input type="number" class="form-control" id="glucose_level" name="glucose_level" step="0.01">
             </div>
             <br>
             <div class="form-group">
-                <label for="febre">Temperature</label>
-                <input type="number" class="form-control" id="febre" value="yes" name="febre">
+                <label for="fever">Temperature</label>
+                <input type="number" class="form-control" id="fever" value="yes" name="fever" step="0.01">
             </div>
             <br>
 
@@ -137,7 +137,7 @@
                 </div>
                 <br>
                 <div class="form-group">
-                    <label for="local_dor">Do you have any pain or discomfort anywhere in your body?</label>
+                    <label for="local_dor">Describe your symptoms</label>
                     <input type="text" class="form-control" id="local_dor" name="local_dor">
                 </div>
                 <br>
